# razer-control-revived

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TESTING_CHECKLIST.md  install-local.sh
crates/razer-cli/: Cargo.toml
crates/razer-cli/src/: main.rs
crates/razer-core/: Cargo.toml
crates/razer-core/src/: lib.rs
crates/razer-daemon/: Cargo.toml
crates/razer-daemon/src/: battery.rs  config.rs  cpu_energy.rs  dbus_mutter_displayconfig.rs  dbus_mutter_idlemonitor.rs  device.rs  gpu.rs  login1.rs  main.rs  screensaver.rs  thermal.rs
crates/razer-daemon/src/kbd/: board.rs  effects.rs  mod.rs
crates/razer-gui/: Cargo.toml
crates/razer-gui/data/: razer-gui.desktop
crates/razer-gui/src/: daemon.rs  main.rs  telemetry.rs  theme.rs  tray.rs  widgets.rs
crates/razer-gui/src/pages/: about.rs  battery.rs  gpu.rs  lighting.rs  mod.rs  overview.rs  performance.rs
data/devices/: laptops.json
data/udev/: 99-hidraw-permissions.rules
kde-widget/: 00-START-HERE.md  ARCHITECTURE.md  CMakeLists.txt  CONFIGURATION.md  FILES.md  GETTING_STARTED.txt  INDEX.md  QUICKSTART.md  README.md  install-plasmoid.sh  install.sh
kde-widget/package/: metadata.json
kde-widget/package/contents/config/: main.xml
kde-widget/package/contents/ui/: main.qml
kde-widget/src/: daemoncommunicator.cpp  daemoncommunicator.h  metadata.json  razercontrolwidget.cpp  razercontrolwidget.h  resources.qrc
packaging/fedora/: razercontrol.spec
razer_control_gui/: README.md
razer_control_gui/data/devices/: laptops.json
razer_control_gui/data/services/systemd/: razercontrol.service
razer_control_gui/kde-widget/: SUMMARY.md
razer_control_gui/kde-widget/package/contents/ui/: main.qml
razer_control_gui/src/: comms.rs
razer_control_gui/src/cli/: cli.rs
razer_control_gui/src/daemon/: config.rs  daemon.rs  device.rs  thermal.rs
razer_control_gui/src/razer-settings/: razer-settings.rs  widgets.rs
razer_control_gui/testdata/: legacy-02c6-config.json
xtask/: Cargo.toml
xtask/src/: main.rs
