[workspace]
resolver = "3"
members = ["crates/razer-core", "crates/razer-daemon", "crates/razer-cli", "crates/razer-gui", "xtask"]

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["Adrian Kozowski <kontakt@adrian-kozlowski.de>"]

[workspace.dependencies]
razer-core = { path = "crates/razer-core" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

[workspace.lints.clippy]
get_first = "allow"
