[package]
name = "razer-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
razer-core = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
serde_json = "1.0"
serde-big-array = "0.5.1"
rand = "0.8.5"
lazy_static = "1.4.0"
signal-hook = "0.3.17"
dbus = "0.9.7"
hidapi = { version = "2.4.1", default-features = false, features = ["linux-native"] }
log = "0.4.22"
env_logger = "0.11.5"
